# wat

./: .gitignore  Cargo.toml  README.md  justfile
client/: Cargo.toml  README.md
client/src/: main.rs
client/src/wwebjsserver_api/: mod.rs
server/: README.md  generate-token.js  package-lock.json  package.json  rest_api.js
src/: main.rs
