[package]
name = "wat"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.17"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# image support
viuer = { version = "0.9.2", optional = true }

# TUI
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.29.0", optional = true }

[features]
default = []

images = ["viuer"]

tui = ["ratatui", "crossterm"]
