[package]
name = "wat"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.17"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
colored = "3.0.0"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"

# image support
viuer = { version = "0.9.2", optional = true }

# TUI
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.29.0", optional = true }
ratatui-image = { version = "8.0.1", optional = true }

[features]
default = []

images = ["viuer"]

tui = ["ratatui", "crossterm", "ratatui-image"]
